[gd_scene load_steps=5 format=3 uid="uid://bv3ithe3rsbbk"]

[ext_resource type="Script" path="res://src/Extensions/FFTorama/Main.gd" id="1_7m8wq"]
[ext_resource type="Script" path="res://src/Extensions/FFTorama/SeqAndShapeData.gd" id="2_68e45"]
[ext_resource type="PackedScene" uid="uid://g0s3vevocg3" path="res://src/Extensions/FFTorama/gud_sub_viewport_container.tscn" id="3_k5yu6"]
[ext_resource type="Script" path="res://src/Extensions/FFTorama/WeaponOptionButton.gd" id="4_7qa07"]

[node name="Main" type="Node" node_paths=PackedStringArray("seq_shape_data_node", "settings_container", "weapon_frame_selector", "weapon_layer_selector", "effect_frame_selector", "effect_layer_selector", "assembled_frame_container", "spritesheet_type_selector", "frame_id_spinbox", "assembled_animation_container", "animation_type_selector", "animation_id_spinbox", "animation_frame_slider", "animation_speed_spinbox", "frame_id_text")]
script = ExtResource("1_7m8wq")
seq_shape_data_node = NodePath("SeqAndShapeData")
settings_container = NodePath("MarginSettings")
weapon_frame_selector = NodePath("MarginSettings/ScrollContainer/VBoxContainer/LocationsGridContainer2/OptionWepFrame")
weapon_layer_selector = NodePath("MarginSettings/ScrollContainer/VBoxContainer/LocationsGridContainer2/OptionWepLayer")
effect_frame_selector = NodePath("MarginSettings/ScrollContainer/VBoxContainer/LocationsGridContainer2/OptionEffFrame")
effect_layer_selector = NodePath("MarginSettings/ScrollContainer/VBoxContainer/LocationsGridContainer2/OptionEffLayer")
assembled_frame_container = NodePath("MarginAssembledFrame")
spritesheet_type_selector = NodePath("MarginAssembledFrame/AssembledFrame/GridContainer/SpritesheetTypeOptionButton")
frame_id_spinbox = NodePath("MarginAssembledFrame/AssembledFrame/GridContainer/FrameIdSpinBox")
frame_id = 8
assembled_animation_container = NodePath("MarginAssembledAnimation")
animation_type_selector = NodePath("MarginAssembledAnimation/AssembledAnimation/VBoxContainer/GridContainer/AnimationsTypeOptionButton")
animation_id_spinbox = NodePath("MarginAssembledAnimation/AssembledAnimation/VBoxContainer/GridContainer/AnimationIdSpinBox")
animation_frame_slider = NodePath("MarginAssembledAnimation/AssembledAnimation/VBoxContainer/AnimationFrameSlider/AnimationFrameHSlider")
animation_speed_spinbox = NodePath("MarginSettings/ScrollContainer/VBoxContainer/GeneralContainer/SpinBoxSpeed")
frame_id_text = NodePath("MarginAssembledAnimation/AssembledAnimation/VBoxContainer/GridContainer/LineEditFrameId")
animation_id = 6

[node name="SeqAndShapeData" type="Node" parent="."]
script = ExtResource("2_68e45")

[node name="MarginAssembledFrame" type="MarginContainer" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="AssembledFrame" type="VBoxContainer" parent="MarginAssembledFrame"]
layout_mode = 2

[node name="AssembledFrameViewportContainer" parent="MarginAssembledFrame/AssembledFrame" instance=ExtResource("3_k5yu6")]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginAssembledFrame/AssembledFrame"]
layout_mode = 2
columns = 2

[node name="LabelShape" type="Label" parent="MarginAssembledFrame/AssembledFrame/GridContainer"]
layout_mode = 2
text = "Shape"

[node name="SpritesheetTypeOptionButton" type="OptionButton" parent="MarginAssembledFrame/AssembledFrame/GridContainer"]
layout_mode = 2
item_count = 6
selected = 0
popup/item_0/text = "type1"
popup/item_0/id = 0
popup/item_1/text = "type2"
popup/item_1/id = 1
popup/item_2/text = "mon"
popup/item_2/id = 2
popup/item_3/text = "kanzen"
popup/item_3/id = 3
popup/item_4/text = "wep1"
popup/item_4/id = 4
popup/item_5/text = "wep2"
popup/item_5/id = 5

[node name="LabelFrame" type="Label" parent="MarginAssembledFrame/AssembledFrame/GridContainer"]
layout_mode = 2
text = "Frame"

[node name="FrameIdSpinBox" type="SpinBox" parent="MarginAssembledFrame/AssembledFrame/GridContainer"]
layout_mode = 2
rounded = true

[node name="MarginAssembledAnimation" type="MarginContainer" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="AssembledAnimation" type="VBoxContainer" parent="MarginAssembledAnimation"]
layout_mode = 2

[node name="SubViewportContainer" parent="MarginAssembledAnimation/AssembledAnimation" instance=ExtResource("3_k5yu6")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginAssembledAnimation/AssembledAnimation"]
layout_mode = 2

[node name="AnimationFrameSlider" type="HBoxContainer" parent="MarginAssembledAnimation/AssembledAnimation/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginAssembledAnimation/AssembledAnimation/VBoxContainer/AnimationFrameSlider"]
layout_mode = 2
text = "Play?"

[node name="IsPlayingCheckBox" type="CheckBox" parent="MarginAssembledAnimation/AssembledAnimation/VBoxContainer/AnimationFrameSlider"]
layout_mode = 2
button_pressed = true

[node name="AnimationFrameHSlider" type="HSlider" parent="MarginAssembledAnimation/AssembledAnimation/VBoxContainer/AnimationFrameSlider"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
rounded = true
editable = false
ticks_on_borders = true

[node name="Label2" type="Label" parent="MarginAssembledAnimation/AssembledAnimation/VBoxContainer/AnimationFrameSlider"]
layout_mode = 2
text = " "

[node name="GridContainer" type="GridContainer" parent="MarginAssembledAnimation/AssembledAnimation/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="LabelFrameId" type="Label" parent="MarginAssembledAnimation/AssembledAnimation/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Frame Index"

[node name="LineEditFrameId" type="LineEdit" parent="MarginAssembledAnimation/AssembledAnimation/VBoxContainer/GridContainer"]
layout_mode = 2
text = "0"
max_length = 4
editable = false
selecting_enabled = false

[node name="LabelType" type="Label" parent="MarginAssembledAnimation/AssembledAnimation/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Animations Type"

[node name="AnimationsTypeOptionButton" type="OptionButton" parent="MarginAssembledAnimation/AssembledAnimation/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="LabelAnimationId" type="Label" parent="MarginAssembledAnimation/AssembledAnimation/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Animation"

[node name="AnimationIdSpinBox" type="SpinBox" parent="MarginAssembledAnimation/AssembledAnimation/VBoxContainer/GridContainer"]
layout_mode = 2
rounded = true

[node name="MarginSettings" type="MarginContainer" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="MarginSettings"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginSettings/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GeneralContainer" type="GridContainer" parent="MarginSettings/ScrollContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="BackgroundColor" type="Label" parent="MarginSettings/ScrollContainer/VBoxContainer/GeneralContainer"]
layout_mode = 2
text = "Background Color"

[node name="BackgroundColorPickerButton" type="ColorPickerButton" parent="MarginSettings/ScrollContainer/VBoxContainer/GeneralContainer"]
layout_mode = 2

[node name="LabelAnimationSpeed" type="Label" parent="MarginSettings/ScrollContainer/VBoxContainer/GeneralContainer"]
layout_mode = 2
text = "Animations Speed (FPS)"

[node name="SpinBoxSpeed" type="SpinBox" parent="MarginSettings/ScrollContainer/VBoxContainer/GeneralContainer"]
layout_mode = 2
max_value = 120.0
step = 0.1
value = 60.0
allow_greater = true

[node name="LabelUpdateSelection" type="Label" parent="MarginSettings/ScrollContainer/VBoxContainer/GeneralContainer"]
layout_mode = 2
text = "Update Selection?"

[node name="SelectionCheckBox" type="CheckBox" parent="MarginSettings/ScrollContainer/VBoxContainer/GeneralContainer"]
layout_mode = 2
button_pressed = true

[node name="LabelOpcodeTitle" type="Label" parent="MarginSettings/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "-- Opcode Options --"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OpcodeContainer" type="GridContainer" parent="MarginSettings/ScrollContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="LabelWep" type="Label" parent="MarginSettings/ScrollContainer/VBoxContainer/OpcodeContainer"]
layout_mode = 2
text = "Weapon"

[node name="WeaponOptionButton" type="OptionButton" parent="MarginSettings/ScrollContainer/VBoxContainer/OpcodeContainer"]
layout_mode = 2
script = ExtResource("4_7qa07")

[node name="LabelWepAnim" type="Label" parent="MarginSettings/ScrollContainer/VBoxContainer/OpcodeContainer"]
layout_mode = 2
text = "QueueSpriteAnim Wep?"

[node name="WepAnimCheckBox" type="CheckBox" parent="MarginSettings/ScrollContainer/VBoxContainer/OpcodeContainer"]
layout_mode = 2

[node name="LabelEffAnim2" type="Label" parent="MarginSettings/ScrollContainer/VBoxContainer/OpcodeContainer"]
layout_mode = 2
text = "QueueSpriteAnim Eff?"

[node name="EffAnimCheckBox2" type="CheckBox" parent="MarginSettings/ScrollContainer/VBoxContainer/OpcodeContainer"]
layout_mode = 2

[node name="LocationsGridContainer2" type="GridContainer" parent="MarginSettings/ScrollContainer/VBoxContainer"]
layout_mode = 2
columns = 4

[node name="LabelLocation" type="Label" parent="MarginSettings/ScrollContainer/VBoxContainer/LocationsGridContainer2"]
layout_mode = 2
text = "Sheet"

[node name="LabelFrame" type="Label" parent="MarginSettings/ScrollContainer/VBoxContainer/LocationsGridContainer2"]
layout_mode = 2
text = "Frame"

[node name="LabelLayer" type="Label" parent="MarginSettings/ScrollContainer/VBoxContainer/LocationsGridContainer2"]
layout_mode = 2
text = "Layer"

[node name="LabelType" type="Label" parent="MarginSettings/ScrollContainer/VBoxContainer/LocationsGridContainer2"]
layout_mode = 2
text = "Type"

[node name="LabelWep" type="Label" parent="MarginSettings/ScrollContainer/VBoxContainer/LocationsGridContainer2"]
layout_mode = 2
text = "Wep"

[node name="OptionWepFrame" type="OptionButton" parent="MarginSettings/ScrollContainer/VBoxContainer/LocationsGridContainer2"]
layout_mode = 2
tooltip_text = "The pixelorama frame the Wep sprite sheet is on"

[node name="OptionWepLayer" type="OptionButton" parent="MarginSettings/ScrollContainer/VBoxContainer/LocationsGridContainer2"]
layout_mode = 2
tooltip_text = "The pixelorama layer the Wep sprite sheet is on"

[node name="OptionWepType" type="OptionButton" parent="MarginSettings/ScrollContainer/VBoxContainer/LocationsGridContainer2"]
layout_mode = 2
tooltip_text = "The shp/seq type the Wep sprite sheet is"
item_count = 2
selected = 0
popup/item_0/text = "1"
popup/item_0/id = 0
popup/item_1/text = "2"
popup/item_1/id = 1

[node name="LabelEff" type="Label" parent="MarginSettings/ScrollContainer/VBoxContainer/LocationsGridContainer2"]
layout_mode = 2
text = "Eff"

[node name="OptionEffFrame" type="OptionButton" parent="MarginSettings/ScrollContainer/VBoxContainer/LocationsGridContainer2"]
layout_mode = 2
tooltip_text = "The pixelorama frame the Eff sprite sheet is on"

[node name="OptionEffLayer" type="OptionButton" parent="MarginSettings/ScrollContainer/VBoxContainer/LocationsGridContainer2"]
layout_mode = 2
tooltip_text = "The pixelorama layer the Eff sprite sheet is on"

[node name="OptionEffType" type="OptionButton" parent="MarginSettings/ScrollContainer/VBoxContainer/LocationsGridContainer2"]
layout_mode = 2
tooltip_text = "The shp/seq type the Wep sprite sheet is"
item_count = 2
selected = 0
popup/item_0/text = "1"
popup/item_0/id = 0
popup/item_1/text = "2"
popup/item_1/id = 1

[connection signal="item_selected" from="MarginAssembledFrame/AssembledFrame/GridContainer/SpritesheetTypeOptionButton" to="." method="_on_spritesheet_type_option_button_item_selected"]
[connection signal="value_changed" from="MarginAssembledFrame/AssembledFrame/GridContainer/FrameIdSpinBox" to="." method="_on_frame_id_spin_box_value_changed"]
[connection signal="toggled" from="MarginAssembledAnimation/AssembledAnimation/VBoxContainer/AnimationFrameSlider/IsPlayingCheckBox" to="." method="_on_is_playing_check_box_toggled"]
[connection signal="value_changed" from="MarginAssembledAnimation/AssembledAnimation/VBoxContainer/AnimationFrameSlider/AnimationFrameHSlider" to="." method="_on_animation_frame_h_slider_value_changed"]
[connection signal="item_selected" from="MarginAssembledAnimation/AssembledAnimation/VBoxContainer/GridContainer/AnimationsTypeOptionButton" to="." method="_on_animations_type_option_button_item_selected"]
[connection signal="value_changed" from="MarginAssembledAnimation/AssembledAnimation/VBoxContainer/GridContainer/AnimationIdSpinBox" to="." method="_on_animation_id_spin_box_value_changed"]
[connection signal="color_changed" from="MarginSettings/ScrollContainer/VBoxContainer/GeneralContainer/BackgroundColorPickerButton" to="." method="_on_background_color_picker_button_color_changed"]
[connection signal="value_changed" from="MarginSettings/ScrollContainer/VBoxContainer/GeneralContainer/SpinBoxSpeed" to="." method="_on_spin_box_speed_value_changed"]
[connection signal="toggled" from="MarginSettings/ScrollContainer/VBoxContainer/GeneralContainer/SelectionCheckBox" to="." method="_on_selection_check_box_toggled"]
[connection signal="item_selected" from="MarginSettings/ScrollContainer/VBoxContainer/OpcodeContainer/WeaponOptionButton" to="." method="_on_weapon_option_button_item_selected"]
[connection signal="item_selected" from="MarginSettings/ScrollContainer/VBoxContainer/LocationsGridContainer2/OptionWepFrame" to="." method="_on_option_wep_frame_item_selected"]
[connection signal="item_selected" from="MarginSettings/ScrollContainer/VBoxContainer/LocationsGridContainer2/OptionWepLayer" to="." method="_on_option_wep_layer_item_selected"]
[connection signal="item_selected" from="MarginSettings/ScrollContainer/VBoxContainer/LocationsGridContainer2/OptionWepType" to="." method="_on_option_wep_type_item_selected"]
[connection signal="item_selected" from="MarginSettings/ScrollContainer/VBoxContainer/LocationsGridContainer2/OptionEffFrame" to="." method="_on_option_eff_frame_item_selected"]
[connection signal="item_selected" from="MarginSettings/ScrollContainer/VBoxContainer/LocationsGridContainer2/OptionEffLayer" to="." method="_on_option_eff_layer_item_selected"]
[connection signal="item_selected" from="MarginSettings/ScrollContainer/VBoxContainer/LocationsGridContainer2/OptionEffType" to="." method="_on_option_eff_type_item_selected"]
